# adviceprodups

./: .gitignore  .project  MANIFEST.in  README.md  setup.cfg  setup.py
src/: __init__.py  adviceprodups.py  apdups.py  client.py  deduplicate.py  parseapcsv.py  validate.py
src/adviceprodups/: __init__.py  __main__.py  client.py  deduplicate.py  main.py  parseapcsv.py  validate.py
src/adviceprodups/aplib/: deduplicate.py  main.py  parseapcsv.py  validate.py
