[metadata]
name = adviceprodups
version = 1.0
description = Duplicate detection for AdvicePro (a UK web-based case management system)
long_description = file: README.md
author = Chris Isbell
author_email = admin@clearproject.org.uk
url = https://github.com/chrisisbell/adviceprodups
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
#package_data =
#    = docs/*.pdf
#    = images/*.png
install_requires =
    fuzzywuzzy
zip_safe=False
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    adviceprodups = adviceprodups:main
