[metadata]
name = adviceprodups
version = 1.0
description = Duplicate detection for AdvicePro (a UK web-based case management system)
long_description = file: README.md
author = Chris Isbell
author_email = admin@clearproject.org.uk
url = https://github.com/chrisisbell/adviceprodups
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    fuzzywuzzy
    python-Levenshtein-wheels
zip_safe=False
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    adviceprodups = adviceprodups.main:main
    
[options.data_files]
. = docs/images/report_fields.png
